# grep

./: .gitignore  CMakeLists.txt  duplicates_scanner.cpp  duplicates_scanner.h  file_counter.cpp  file_counter.h  file_index.cpp  file_index.h  file_indexer.cpp  file_indexer.h  grep.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  string_finder.cpp  string_finder.h  watch_index_remover.cpp  watch_index_remover.h  watcher.cpp  watcher.h
tests/: tests.cpp  tests.h  tests.pro
